# python-fastapi-foundation

./: CHANGELOG.md  README.md  cookiecutter.json
{{cookiecutter.service_name}}/: .env.example  .gitmodules  .importlinter  .pre-commit-config.yaml  AGENTS.md  Dockerfile  Makefile  postgres_alembic.ini  pyproject.toml
{{cookiecutter.service_name}}/.github/: pull_request_template.md
{{cookiecutter.service_name}}/docker/: docker-compose.yml
{{cookiecutter.service_name}}/docker/{{cookiecutter.service_name}}/: entrypoint.sh
{{cookiecutter.service_name}}/postgres_migrations/: alembic.ini  env.py
{{cookiecutter.service_name}}/scripts/: create_postgres_migration.sh  run_postgres_migration.sh  setup_dev.sh
{{cookiecutter.service_name}}/src/: app.py  main.py
{{cookiecutter.service_name}}/src/api/: dependencies.py
{{cookiecutter.service_name}}/src/api/health/: health_router.py
{{cookiecutter.service_name}}/src/api/internal/: __init__.py  router.py
{{cookiecutter.service_name}}/src/api/v1/: __init__.py
{{cookiecutter.service_name}}/src/business_services/: base_business_service.py
{{cookiecutter.service_name}}/src/configs/: abhilekh_settings.py  app_settings.py  base_settings.py  config_loader.py  cratedb_settings.py  emqx_settings.py  jwt_settings.py  kafka_settings.py  kavach_settings.py  parichay_settings.py  postgres_settings.py  redis_settings.py  s3_settings.py  telemetry_settings.py
{{cookiecutter.service_name}}/src/di/: dependency_container.py  qualified_types.py
{{cookiecutter.service_name}}/src/exceptions/: app_exceptions.py
{{cookiecutter.service_name}}/src/infra_services/: abhilekh_client.py  base_infra_service.py  cratedb_service.py  emqx_publish_service.py  kafka_consumer_service.py  kavach_client.py  parichay_client.py  postgres_service.py  redis_service.py  s3_service.py  telemetry_service.py
{{cookiecutter.service_name}}/src/logging/: __init__.py  logging_context.py  logging_setup.py
{{cookiecutter.service_name}}/src/middleware/: allowlist_middleware.py  mtls_middleware.py
{{cookiecutter.service_name}}/src/models/: abhilekh_models.py  auth_models.py  base_models.py  health_models.py  parichay_models.py  telemetry_types.py
{{cookiecutter.service_name}}/src/utils/: api_helpers.py  correlation_id.py
{{cookiecutter.service_name}}/tests/: README.md
{{cookiecutter.service_name}}/tests/_helpers/: verify_preflight.py
{{cookiecutter.service_name}}/tests/fixtures/: jwt_public.pem
{{cookiecutter.service_name}}/tests/unit/: conftest.py  test_health.py
{{cookiecutter.service_name}}/tests/verify/: 01-health-detailed.md
(+16 files in other folders)
